<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleA"
            android:text="@string/titleA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnRecordA"
            android:layout_below="@+id/tvTitleA"
            android:text="@string/btnStartRecordA"
            android:layout_width="200dp"
            android:layout_height="40dp" />


        <Button
            android:id="@+id/btnPlayRecordA"
            android:layout_below="@id/btnRecordA"
            android:text="@string/btnPlayRecordA"
            android:layout_width="200dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleV"
            android:text="@string/titleV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnRecordV"
            android:layout_below="@+id/tvTitleV"
            android:text="@string/btnStartRecordV"
            android:layout_width="200dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnPlayV"
            android:layout_below="@+id/btnRecordV"
            android:text="@string/btnPlayRecordV"
            android:layout_width="200dp"
            android:layout_height="40dp" />

        <VideoView
            android:id="@+id/vViewV"
            android:layout_width="250dp"
            android:layout_height="150dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleP"
            android:text="@string/titleP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnChosePhoto"
            android:layout_below="@+id/tvTitleP"
            android:text="@string/btnChoosePhoto"
            android:layout_width="200dp"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
